# cutout-images

./: README.md  package-lock.json  package.json
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: batch.vue  setting.vue  single.vue
