[package]
name = "cutout-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 读取文件
rfd = "0.14.1"
# 图片转base64
base64 = "0.22.0"
reqwest = { version = "0.12", features = ["json", "multipart", "stream", "blocking"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1.8"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
